update service and repo

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,13 @@
             <version>5.4.32.Final</version>
             <type>jar</type>
         </dependency>
+        
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.24</version>
+            <scope>provided</scope>
+        </dependency>
 
         <!-- https://mvnrepository.com/artifact/com.microsoft.sqlserver/mssql-jdbc -->
         <dependency>
@@ -20,6 +27,20 @@
             <artifactId>mssql-jdbc</artifactId>
             <version>9.4.1.jre8</version>            
         </dependency>
+        
+        <dependency>
+	<groupId>com.toedter</groupId>
+	<artifactId>jcalendar</artifactId>
+	<version>1.4</version>
+</dependency>
+<!-- Thanks for using https://jar-download.com -->
+
+<dependency>
+            <groupId>org.netbeans.external</groupId>
+            <artifactId>AbsoluteLayout</artifactId>
+            <version>RELEASE130</version>
+        </dependency>
+
     </dependencies>
     
     <properties>
