--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.shoptao.application.Application</groupId>
-    <artifactId>DuAn1_ShopTao</artifactId>
+    <artifactId>DuAn1_QuanLyBanIPhone</artifactId>
     <version>1.0-SNAPSHOT</version>
     
     <dependencies>
@@ -20,6 +20,24 @@
             <artifactId>mssql-jdbc</artifactId>
             <version>9.4.1.jre8</version>            
         </dependency>
+        
+        <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.12</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.toedter</groupId>
+            <artifactId>jcalendar</artifactId>
+            <version>1.4</version>
+        </dependency>
+        <dependency>
+            <groupId>org.netbeans.external</groupId>
+            <artifactId>AbsoluteLayout</artifactId>
+            <version>RELEASE130</version>
+        </dependency>
     </dependencies>
     
     <properties>
@@ -28,5 +46,12 @@
         <maven.compiler.target>1.8</maven.compiler.target>
         <exec.mainClass>com.shoptao.application.Application</exec.mainClass>
     </properties>
-    
+    <name>DuAn1_QuanLyBanIPhone</name>
+    <repositories>
+        <repository>
+            <id>unknown-jars-temp-repo</id>
+            <name>A temporary repository created by NetBeans for libraries and jars it could not identify. Please replace the dependencies in this repository with correct ones and delete this repository.</name>
+            <url>file:${project.basedir}/lib</url>
+        </repository>
+    </repositories>
 </project>
